Implement keyboard shortcuts for text input and enhance ListView functionality